tests/snapshots/errors__errors@component_missing_binding.snap
---
source: tests/errors.rs
expression: pretty
---
Status ExitStatus(unix_wait_status(25856))

Stdout:


Stderr:
error: Binding is not defined
  --> examples/component_missing_binding.rs:42:8
   |
42 |     fn brewer(&self) -> CoffeeMaker<H, P>;
   |        ^^^^^^

error[E0599]: no function or associated item named `builder` found for struct `DirkCoffeeShop` in the current scope
  --> examples/component_missing_binding.rs:20:39
   |
20 |       let coffee_shop = DirkCoffeeShop::builder().build();
   |                                         ^^^^^^^ function or associated item not found in `DirkCoffeeShop`
...
31 | / #[component(
32 | |     [
33 | |         logger: singleton_bind(CoffeeLogger),
34 | |         heater: scoped_bind(ElectricHeater) [logger],
...  |
37 | |     ]
38 | | )]
   | |__- function or associated item `builder` not found for this struct

For more information about this error, try `rustc --explain E0599`.
error: could not compile `errors` (example "component_missing_binding") due to 2 previous errors
